stupid copy and paste... and forgot to port tm-docker changes to eae-docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,6 @@ services:
     tty: true
     depends_on:
       - mongo
-      - worker1
-      - worker2
     ports:
       - "8443:8443"
     volumes:
@@ -27,6 +25,8 @@ services:
     hostname: worker1
     stdin_open: true
     tty: true
+    depends_on:
+      - interfaceeae
     volumes:
       - "./interfaceEAE/lsf.cluster.openlava:/opt/openlava-3.3/etc/lsf.cluster.openlava"
       - "./interfaceEAE/lsb.hosts:/opt/openlava-3.3/etc/lsb.hosts"
@@ -39,6 +39,8 @@ services:
     hostname: worker2
     stdin_open: true
     tty: true
+    depends_on:
+      - interfaceeae
     volumes:
       - "./interfaceEAE/lsf.cluster.openlava:/opt/openlava-3.3/etc/lsf.cluster.openlava"
       - "./interfaceEAE/lsb.hosts:/opt/openlava-3.3/etc/lsb.hosts"
@@ -66,7 +68,8 @@ services:
     image: aoehmich/transmart-app-eae:latest
     restart: unless-stopped
     ports:
-      - "127.0.0.1:8009:8009"
+      - "8009:8009"
+      - "8080:8080"
     depends_on:
       - tmdb
       - tmsolr
