changing volume path and GNAC deleted their folder -_- so I created one that is mine...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       - "8888:8888"
       - "18088:18088"
     volumes:
-      - "./jupyter/jupyter_notebook_config.py:/root/.jupyter/jupyter_notebook_config.py"
-      - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
-      - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
+      - "./jupyter/jupyter_notebook_config.py:/root/jupyter_notebook_config.py"
+      - "./ssh/id_rsa:/root/id_rsa"
+      - "./ssh/id_rsa.pub:/root/id_rsa.pub"
   interfaceeae:
     image: aoehmich/interface-eae:latest
     container_name: interfaceeae
