--- a/workerSparkExample/Dockerfile
+++ b/workerSparkExample/Dockerfile
@@ -5,10 +5,11 @@ ADD Cloudera_Management.py /root
 ADD start_eae.sh /root
 
 ## We install all the dependencies
-RUN apt-get update -q && apt-get upgrade -y --no-install-recommends \
-    && apt-get install -y vim git wget curl zip python-numpy python-scipy python-matplotlib python-pip python-scikits-learn libcurl4-openssl-dev libncurses-dev \
+RUN apt-get update -q \
+    && apt-get install -y vim git wget curl zip python-numpy python-scipy python-matplotlib python-pip python-scikits-learn libcurl4-openssl-dev libncurses-dev libxml2-dev \
     && apt-get install -y libcurl4-gnutls-dev tcl-dev psmisc openssh-server \
     && pip install scimath \
+    && pip install cm-api \
     && pip install pymongo
 
 ## We install openlava
