--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,9 @@ services:
     hostname: workerSpark
     stdin_open: true
     tty: true
+    privileged: true
+    ports:
+      - "7181:7180"
     depends_on:
       - interfaceeae
     volumes:
