--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,7 @@ services:
       - "8443:8443"
     volumes:
       - "./interfaceEAE/Config.groovy:/home/eae/.grails/interfaceEAEConfig/Config.groovy"
-      - "./interfaceEAE/lsb.hosts:/opt/openlava-3.3/etc/lsb.hosts"
-      - "./interfaceEAE/lsb.queues:/opt/openlava-3.3/etc/lsb.queues"
-      - "./interfaceEAE/lsf.cluster.openlava:/opt/openlava-3.3/etc/lsf.cluster.openlava"
+      - "./LSF/lsf.zip:/root/lsf.zip"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   worker1:
@@ -44,9 +42,7 @@ services:
     depends_on:
       - interfaceeae
     volumes:
-      - "./interfaceEAE/lsf.cluster.openlava:/opt/openlava-3.3/etc/lsf.cluster.openlava"
-      - "./interfaceEAE/lsb.hosts:/opt/openlava-3.3/etc/lsb.hosts"
-      - "./interfaceEAE/lsb.queues:/opt/openlava-3.3/etc/lsb.queues"
+      - "./LSF/lsf.zip:/root/lsf.zip"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   worker2:
@@ -57,10 +53,7 @@ services:
     tty: true
     depends_on:
       - interfaceeae
-    volumes:
-      - "./interfaceEAE/lsf.cluster.openlava:/opt/openlava-3.3/etc/lsf.cluster.openlava"
-      - "./interfaceEAE/lsb.hosts:/opt/openlava-3.3/etc/lsb.hosts"
-      - "./interfaceEAE/lsb.queues:/opt/openlava-3.3/etc/lsb.queues"
+      - "./LSF/lsf.zip:/root/lsf.zip"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   workerSpark:
@@ -75,9 +68,7 @@ services:
     depends_on:
       - interfaceeae
     volumes:
-      - "./interfaceEAE/lsf.cluster.openlava:/opt/openlava-3.3/etc/lsf.cluster.openlava"
-      - "./interfaceEAE/lsb.hosts:/opt/openlava-3.3/etc/lsb.hosts"
-      - "./interfaceEAE/lsb.queues:/opt/openlava-3.3/etc/lsb.queues"
+      - "./LSF/lsf.zip:/root/lsf.zip"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   mongo-initialize:
