to be continued

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,10 @@ services:
       - "8443:8443"
     volumes:
       - "./interfaceEAE/Config.groovy:/home/eae/.grails/interfaceEAEConfig/Config.groovy"
-      - "./LSF/lsf.zip:/root/lsf.zip"
+      - "./LSF/install.config:/root/install.config"
+      - "./LSF/lsb.hosts:/root/lsb.hosts"
+      - "./LSF/lsb.queues:/root/lsb.queues"
+      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   worker1:
@@ -42,7 +45,6 @@ services:
     depends_on:
       - interfaceeae
     volumes:
-      - "./LSF/lsf.zip:/root/lsf.zip"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   worker2:
@@ -53,7 +55,7 @@ services:
     tty: true
     depends_on:
       - interfaceeae
-      - "./LSF/lsf.zip:/root/lsf.zip"
+    volumes:
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   workerSpark:
@@ -68,7 +70,6 @@ services:
     depends_on:
       - interfaceeae
     volumes:
-      - "./LSF/lsf.zip:/root/lsf.zip"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   mongo-initialize:
