--- a/LSF/install.config
+++ b/LSF/install.config
@@ -50,7 +50,7 @@ LSF_TOP="/usr/share/lsf"
 # all host types (approximately 300 MB per host type).
 #
 # -----------------
-LSF_ADMINS="lsfadmin ubuntu"
+LSF_ADMINS="eae"
 # -----------------
 # List of LSF administrators {REQUIRED}
 #
@@ -82,7 +82,7 @@ LSF_ADMINS="lsfadmin ubuntu"
 #**********************************************************
 #
 # -----------------
-LSF_MASTER_LIST="eti-lsf-dev"
+LSF_MASTER_LIST="interfaceeae"
 # -----------------
 # List of LSF server hosts to be master or master candidate in the
 # cluster {REQUIRED when you install for the first time or during
@@ -162,7 +162,7 @@ LSF_TARDIR="/usr/share/lsf/lsf_distrib/"
 # Default: All hosts in LSF_MASTER_LIST.
 #
 # -----------------
-# LSF_ADD_CLIENTS="hoste hostf"
+ LSF_ADD_CLIENTS="worker1 worker2 workerspark"
 # -----------------
 # List of LSF client-only hosts.
 #
@@ -190,7 +190,7 @@ LSF_TARDIR="/usr/share/lsf/lsf_distrib/"
 # Default: Event streaming is disabled.
 #
 # -----------------
-# LSF_QUIET_INST="N"
+LSF_QUIET_INST="Y"
 # -----------------
 # Enables quiet installation.
 #
