--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,10 @@ services:
       - "8443:8443"
     volumes:
       - "./interfaceEAE/Config.groovy:/home/eae/.grails/interfaceEAEConfig/Config.groovy"
-      - "./LSF/install.config:/root/install.config"
-      - "./LSF/lsb.hosts:/root/lsb.hosts"
-      - "./LSF/lsb.queues:/root/lsb.queues"
-      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
+#      - "./LSF/install.config:/root/install.config"
+#      - "./LSF/lsb.hosts:/root/lsb.hosts"
+#      - "./LSF/lsb.queues:/root/lsb.queues"
+#      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   worker1:
@@ -45,10 +45,10 @@ services:
     depends_on:
       - interfaceeae
     volumes:
-      - "./LSF/install.config:/root/install.config"
-      - "./LSF/lsb.hosts:/root/lsb.hosts"
-      - "./LSF/lsb.queues:/root/lsb.queues"
-      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
+#      - "./LSF/install.config:/root/install.config"
+#      - "./LSF/lsb.hosts:/root/lsb.hosts"
+#      - "./LSF/lsb.queues:/root/lsb.queues"
+#      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   worker2:
@@ -60,10 +60,10 @@ services:
     depends_on:
       - interfaceeae
     volumes:
-      - "./LSF/install.config:/root/install.config"
-      - "./LSF/lsb.hosts:/root/lsb.hosts"
-      - "./LSF/lsb.queues:/root/lsb.queues"
-      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
+#      - "./LSF/install.config:/root/install.config"
+#      - "./LSF/lsb.hosts:/root/lsb.hosts"
+#      - "./LSF/lsb.queues:/root/lsb.queues"
+#      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   workerSpark:
@@ -78,10 +78,10 @@ services:
     depends_on:
       - interfaceeae
     volumes:
-      - "./LSF/install.config:/root/install.config"
-      - "./LSF/lsb.hosts:/root/lsb.hosts"
-      - "./LSF/lsb.queues:/root/lsb.queues"
-      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
+#      - "./LSF/install.config:/root/install.config"
+#      - "./LSF/lsb.hosts:/root/lsb.hosts"
+#      - "./LSF/lsb.queues:/root/lsb.queues"
+#      - "./LSF/lsf.cluster.clusterLSF:/root/lsf.cluster.clusterLSF"
       - "./ssh/id_rsa:/home/eae/.ssh/id_rsa"
       - "./ssh/id_rsa.pub:/home/eae/.ssh/id_rsa.pub"
   mongo-initialize:
