--- a/interfaceEAE/install.config
+++ b/interfaceEAE/install.config
@@ -67,7 +67,7 @@ LSF_ADMINS="eae"
 # Secondary LSF administrators are optional.
 #
 # -----------------
- LSF_CLUSTER_NAME="clusterLSF"
+LSF_CLUSTER_NAME="clusterLSF"
 # -----------------
 # Name of the LSF cluster {REQUIRED}
 #
@@ -92,7 +92,7 @@ LSF_MASTER_LIST="interfaceeae"
 # cluster. The first host listed is the LSF master host.
 #
 # -----------------
-LSF_TARDIR="/usr/share/lsf/lsf_distrib/"
+LSF_TARDIR="/usr/share/lsf_distrib/"
 # -----------------
 # Full path to the directory containing the LSF distribution tar files.
 #
@@ -262,7 +262,7 @@ LSF_QUIET_INST="Y"
 #**********************************************************
 # 
 # -----------------
-# SILENT_INSTALL="Y" 
+SILENT_INSTALL="Y"
 # -----------------
 # Enables silent LSF installation.
 #
@@ -272,7 +272,7 @@ LSF_QUIET_INST="Y"
 # Default: LSF silent install is disabled.
 #
 # -----------------
-# LSF_SILENT_INSTALL_TARLIST=""
+LSF_SILENT_INSTALL_TARLIST="all"
 # -----------------
 # List of silent install package names.
 #
