--- a/workerExample/Dockerfile
+++ b/workerExample/Dockerfile
@@ -23,16 +23,15 @@ RUN wget https://mran.revolutionanalytics.com/install/mro/3.3.1/microsoft-r-open
     && ./install.sh
 
 ## We install LSF
-RUN mkdir -p /usr/share/lsf/lsf_distrib/ \
-    && gunzip lsfshpc10.1-x86_64.tar.gz \
-    && tar -xvf lsfshpc10.1-x86_64.tar \
+RUN mkdir -p /usr/share/lsf/ \
+    && mkdir -p /usr/share/lsf_distrib/ \
     && cd lsfshpc10.1-x86_64/lsf/ \
-    && mv lsf10.1_linux2.6-glibc2.3-x86_64.tar.Z  /usr/share/lsf/lsf_distrib/ \
+    && mv lsf10.1_linux2.6-glibc2.3-x86_64.tar.Z  /usr/share/lsf_distrib/ \
     && gunzip lsf10.1_lsfinstall_linux_x86_64.tar.Z \
-    && tar -xvf lsf10.1_lsfinstall_linux_x86_64.tar --directory /usr/share/lsf/lsf_distrib/ \
-    && cd /usr/share/lsf/lsf_distrib/lsf10.1_lsfinstall \
+    && tar -xvf lsf10.1_lsfinstall_linux_x86_64.tar --directory /usr/share/lsf_distrib/ \
+    && cd /usr/share/lsf_distrib/lsf10.1_lsfinstall \
     && cp /root/install.config . \
-    && lsfinstall -f install.config \
+    && ./lsfinstall -f install.config \
     && cd /root \
     && cp lsf.cluster.clusterLSF /usr/share/lsf/conf/ \
     && cp lsb.hosts lsb.queues /usr/share/lsf/conf/lsbatch/clusterLSF/configdir/ \
